# BITTY

./: Anchor.toml  BITTY raydium launch.pages  BITTY roadmap.txt  README.md  bitty todo list.txt
frontend/: index.html
frontend/src/: App.tsx
frontend/src/components/Auth/: Login.tsx  SignUp.tsx
frontend/src/components/Home/: HomePage.tsx
frontend/src/components/Layout/: Header.tsx
frontend/src/components/MemeEditor/: Canvas.tsx  ExportModal.tsx  MemeEditor.tsx  PropertiesPanel.tsx  SaveModal.tsx  Toolbar.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/types/: canvas.ts
programs/bitty/: Cargo.toml
programs/bitty/src/: lib.rs
tests/: bitty.ts
